[gd_scene load_steps=14 format=3 uid="uid://ewqecmpsmp1s"]

[ext_resource type="Script" path="res://main.gd" id="1_x1bre"]
[ext_resource type="PackedScene" uid="uid://515labal0jfn" path="res://scenes/die_o.tscn" id="2_qjyl2"]
[ext_resource type="PackedScene" uid="uid://cchydbji2gcrj" path="res://scenes/die_d.tscn" id="3_h5xj6"]
[ext_resource type="PackedScene" uid="uid://qmf78hu86m58" path="res://scenes/die_s.tscn" id="4_jfk4m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mwrp6"]

[sub_resource type="BoxMesh" id="BoxMesh_quyqy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mrfeo"]
albedo_color = Color(0.470588, 1, 0.870588, 1)

[sub_resource type="FontFile" id="FontFile_tuuxa"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7a54g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_366if"]
bg_color = Color(0.424148, 0.678388, 0.341437, 0.501961)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0owln"]
bg_color = Color(0.423529, 0.678431, 0.341176, 0.501961)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_762nl"]
bg_color = Color(0.423529, 0.678431, 0.341176, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xdex"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="GameRoot" type="Node3D"]
script = ExtResource("1_x1bre")
offense_die_scene = ExtResource("2_qjyl2")
defense_die_scene = ExtResource("3_h5xj6")
special_die_scene = ExtResource("4_jfk4m")

[node name="FaceLookAtTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40.8498)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 4.921, 4.901)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.644351, 0.76473, 0, -0.76473, 0.644351, 0, 24.9711, 13.8114)

[node name="DiceContainer" type="Node3D" parent="."]

[node name="CreatureContainer" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(40, 0, 0, 0, 0.1, 0, 0, 0, 40, 0, 0, 0)
shape = SubResource("BoxShape3D_mwrp6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(40, 0, 0, 0, 0.2, 0, 0, 0, 40, 0, 0, 0)
mesh = SubResource("BoxMesh_quyqy")
skeleton = NodePath("../CollisionShape3D")
surface_material_override/0 = SubResource("StandardMaterial3D_mrfeo")

[node name="DiceSlots" type="Node3D" parent="."]

[node name="DiceSlot1" type="Node3D" parent="DiceSlots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.58, 1)

[node name="DiceSlot2" type="Node3D" parent="DiceSlots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.58, 1)

[node name="DiceSlot3" type="Node3D" parent="DiceSlots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.58, 1)

[node name="DiceSlot4" type="Node3D" parent="DiceSlots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.58, 1)

[node name="DiceSlot5" type="Node3D" parent="DiceSlots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.58, 1)

[node name="DiceSlot6" type="Node3D" parent="DiceSlots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.58, 1)

[node name="FreeReroll" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="FreeReroll"]
z_index = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -73.0
offset_right = 130.0
offset_bottom = -23.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "REROLL"
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
light_mask = 0
z_index = -9
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.117647)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 112.0
offset_bottom = 223.0
grow_horizontal = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
columns = 6

[node name="HoldButton1" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontFile_tuuxa")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_7a54g")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_366if")
theme_override_styles/hover = SubResource("StyleBoxFlat_0owln")
theme_override_styles/pressed = SubResource("StyleBoxFlat_762nl")
theme_override_styles/normal = SubResource("StyleBoxFlat_4xdex")

[node name="HoldButton2" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontFile_tuuxa")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_7a54g")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_366if")
theme_override_styles/hover = SubResource("StyleBoxFlat_0owln")
theme_override_styles/pressed = SubResource("StyleBoxFlat_762nl")
theme_override_styles/normal = SubResource("StyleBoxFlat_4xdex")

[node name="HoldButton3" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontFile_tuuxa")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_7a54g")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_366if")
theme_override_styles/hover = SubResource("StyleBoxFlat_0owln")
theme_override_styles/pressed = SubResource("StyleBoxFlat_762nl")
theme_override_styles/normal = SubResource("StyleBoxFlat_4xdex")

[node name="HoldButton4" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontFile_tuuxa")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_7a54g")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_366if")
theme_override_styles/hover = SubResource("StyleBoxFlat_0owln")
theme_override_styles/pressed = SubResource("StyleBoxFlat_762nl")
theme_override_styles/normal = SubResource("StyleBoxFlat_4xdex")

[node name="HoldButton5" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontFile_tuuxa")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_7a54g")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_366if")
theme_override_styles/hover = SubResource("StyleBoxFlat_0owln")
theme_override_styles/pressed = SubResource("StyleBoxFlat_762nl")
theme_override_styles/normal = SubResource("StyleBoxFlat_4xdex")

[node name="HoldButton6" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontFile_tuuxa")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_7a54g")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_366if")
theme_override_styles/hover = SubResource("StyleBoxFlat_0owln")
theme_override_styles/pressed = SubResource("StyleBoxFlat_762nl")
theme_override_styles/normal = SubResource("StyleBoxFlat_4xdex")

[node name="ResultLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -207.5
offset_top = -114.0
offset_right = 303.5
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 65

[connection signal="pressed" from="FreeReroll/Button" to="." method="_on_button_pressed"]
